fix footer spacing

--- a/Resources/Stylesheets/SCSS/Modules/footer.scss
+++ b/Resources/Stylesheets/SCSS/Modules/footer.scss
@@ -1,7 +1,7 @@
 @import "../base/global";
 
 .footer {
-  --gap-section: 7rem;
+  --gap-section: 5rem;
   margin-top: var(--gap-section);
   margin-bottom: var(--gap-xxl);
   color: var(--color-black);
